--- a/thevoid/whispers/templates/interpretations.html
+++ b/thevoid/whispers/templates/interpretations.html
@@ -4,10 +4,12 @@
     <title>Interps</title>
 </head>
 <body>
-<form action="/success/" method="post">
+
+<div class="gibberish-text">{{ whisp_text }}</div>
+<form action="interpretation?whisper={{ whisp }}" method="post">
   {% csrf_token %}
   {{ form }}
-  <input type="submit" value="Submit" />
+  <input type="submit" value="→" />
 </form>
 </body>
 </html>
