add gunicorn for deploy and static assets

--- a/thevoid/whispers/templates/interpretations.html
+++ b/thevoid/whispers/templates/interpretations.html
@@ -1,15 +1,63 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Interps</title>
-</head>
-<body>
 
-<div class="gibberish-text">{{ whisp_text }}</div>
+{% extends "base.html" %}
+
+{% block title %}Interp{% endblock%}
+
+{% block scripts %}
+{% load static %}
+
+
+{% endblock %}
+
+{% block content %}
+
+<script type="text/javascript">
+// new lunicode object
+var luni = new Lunicode();
+// creepify options 
+luni.tools.creepify.options.top = true;     
+luni.tools.creepify.options.middle = true;  
+luni.tools.creepify.options.bottom = true;  
+luni.tools.creepify.options.maxHeight = 30; 
+luni.tools.creepify.options.randomization = 100;
+
+let text = "{{ whisp_text }}";
+let indecies = [];
+
+for (let i = 0; i < 6; i++){
+    let ind = Math.floor(Math.random() * text.length);
+    let mutated = luni.tools.flip.encode(text.charAt(ind));
+    text = text.substr(0, ind) + mutated + text.substr(ind + 1);
+}
+
+for (let i = 0; i < 4; i++){
+    let ind = Math.floor(Math.random() * text.length);
+    let mutated = luni.tools.roundsquares.encode(text.charAt(ind));
+    text = text.substr(0, ind) + mutated + text.substr(ind + 1);
+}
+
+let creep = luni.tools.creepify.encode(text)
+
+let encoded = {'creep': luni.getHTML(creep), 'id': "{{ whisp }}"};
+
+// onload, add encoded text to elements 
+window.onload = () => {
+    document.getElementById(encoded.id).innerHTML = encoded.creep;
+    document.getElementById('id_interp').focus();
+}
+</script>
+
+
+<div class="gibberish-text" id="{{ whisp }}">
+    
+</div>
+
+<div class="input">
 <form action="interpretation?whisper={{ whisp }}" method="post">
   {% csrf_token %}
   {{ form }}
   <input type="submit" value="→" />
 </form>
-</body>
-</html>
+</div>
+
+{% endblock %}
