--- a/thevoid/whispers/templates/whisper.html
+++ b/thevoid/whispers/templates/whisper.html
@@ -1,13 +1,23 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Whisper</title>
-</head>
-<body>
+
+{% extends "base.html" %}
+
+{% block title %}Interp{% endblock%}
+
+{% block scripts %}
+{% load static %}
+
+
+{% endblock %}
+
+{% block content %}
+
+<div class="input">
 <form action="whisper" method="post">
   {% csrf_token %}
   {{ form }}
   <input type="submit" value="→" />
 </form>
-</body>
-</html>
+
+</div>
+
+{% endblock %}
